AGT-6 agrega interfaz de administracion (tipos)
